evaluation-run/616/k8s/validate/resources/bookstore-billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-billing-service
  namespace: bookstore
  labels:
    app: bookstore-billing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-billing-service
  template:
    metadata:
      labels:
        app: bookstore-billing-service
    spec:
      containers:
        - name: bookstore-billing-service
          image: ralfx22/bsa-billing-service:latest
          ports:
            - containerPort: 5001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-billing-service
  namespace: bookstore
spec:
  type: ClusterIP
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    app: bookstore-billing-service
