evaluation-run/616/k8s/validate/resources/bookstore-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
  labels:
    app: bookstore-catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-catalog-service
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
    spec:
      containers:
        - name: bookstore-catalog-service
          image: ralfx22/bsa-catalog-service:latest
          ports:
            - containerPort: 6001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  type: ClusterIP
  ports:
    - name: "6001"
      port: 6001
      targetPort: 6001
  selector:
    app: bookstore-catalog-service
