evaluation-run/616/k8s/validate/resources/bookstore-chronograf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-chronograf
  namespace: bookstore
  labels:
    app: bookstore-chronograf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookstore-chronograf
  template:
    metadata:
      labels:
        app: bookstore-chronograf
    spec:
      containers:
        - name: bookstore-chronograf
          image: chronograf:1.7.3
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/chronograf
              name: bookstore-chronograf-volume
              subPath: data
      volumes:
        - name: bookstore-chronograf-volume
          persistentVolumeClaim:
            claimName: bookstore-chronograf-volume
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-chronograf
  namespace: bookstore
spec:
  type: ClusterIP
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    app: bookstore-chronograf
