evaluation-run/616/k8s/validate/resources/bookstore-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-order-service
  namespace: bookstore
  labels:
    app: bookstore-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-order-service
  template:
    metadata:
      labels:
        app: bookstore-order-service
    spec:
      containers:
        - name: bookstore-order-service
          image: ralfx22/bsa-order-service:latest
          ports:
            - containerPort: 7001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-order-service
  namespace: bookstore
spec:
  type: ClusterIP
  ports:
    - name: "7001"
      port: 7001
      targetPort: 7001
  selector:
    app: bookstore-order-service
