evaluation-run/616/k8s/validate/resources/bookstore-zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-zipkin
  namespace: bookstore
  labels:
    app: bookstore-zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-zipkin
  template:
    metadata:
      labels:
        app: bookstore-zipkin
    spec:
      containers:
        - name: bookstore-zipkin
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-zipkin
  namespace: bookstore
spec:
  type: ClusterIP
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
  selector:
    app: bookstore-zipkin
